# power_nlp

./: README.md  main.py  pyproject.toml
data/: UC_10GER.m  UC_4UTES.m
power_nlp/: __init__.py
power_nlp/heuristicas/: __init__.py  avg_cost_opt_point.py  avg_full_load_cost.py  forca_bruta.py  heuristic_lagrange.py  marg_cost_avg_power.py  marg_cost_full_load.py  multi_gen_cost_penalty.py  relevance_dispatch.py  utils.py
power_nlp/model_nlp/: __init__.py  despacho_nlp.py  utils.py
power_nlp/reader/: __init__.py  read_m.py
power_nlp/utils/: __init__.py
